cupapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-myapp
spec:
  containers:
  - name: myapp-container
    image: nginx:latest
    resources:
      limits:
        cpu: "500m"
        memory: "512Mi"
