etcd-bak.yaml
apiVersion: v1
kind: Pod
metadata:
  name: etcd-backup
  namespace: kube-system
spec:
  containers:
  - name: etcd-backup
    image: gcr.io/etcd-development/etcdctl:v3.4.15
    command:
      - "/bin/sh"
      - "-c"
      - "ETCDCTL_API=3 etcdctl --endpoints=https:// 172.31.51.178:2379 --cacert=/etc/kubernetes/pki/etcd/ca.crt --cert=/etc/kubernetes/pki/etcd/server.crt --key=/etc/kubernetes/pki/etcd/server.key snapshot save /tmp/myback"
    volumeMounts:
    - name: etcd-certs
      mountPath: /etc/kubernetes/pki/etcd
      readOnly: true
    - name: backup-dir
      mountPath: /tmp
  volumes:
  - name: etcd-certs
    secret:
      secretName: etcd-certs
  - name: backup-dir
    hostPath:
      path: /tmp
      type: DirectoryOrCreate
